@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9922';
+our $VERSION='0.9923';
 
 
 use 5.005;
